# evol-mod-assetmanager

./: .gitignore  meson.build  module.lua
meta/: evmod.configvars  evmod.namespaces  evmod.types
src/: mod.c
src/loaders/: LoaderCommon.h
src/loaders/ImageLoader/: ImageLoader.c  ImageLoader.h
src/loaders/JSONLoader/: JSONLoader.c  JSONLoader.h
src/loaders/MeshLoader/: MeshLoader.c  MeshLoader.h
src/loaders/ShaderLoader/: ShaderLoader.c  ShaderLoader.h
src/loaders/TextLoader/: TextLoader.c  TextLoader.h
subprojects/: assetsys.wrap  shaderc.wrap  shaderc_clang.wrap  shaderc_msvc.wrap
subprojects/packagefiles/assetsys/: assetsys.c  meson.build
subprojects/packagefiles/libshaderc/: meson.build
